fix grid layout on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -24,6 +24,8 @@ body {
 @media (max-width: 800px) {
   .layout {
     grid-template-areas: 'header' 'main' 'sidebar';
+    grid-template-columns: auto;
+    grid-gap: 12px;
   }
   .header a {
     font-size: 14px;
